# metrovalencia-py

./: .gitignore  LICENSE  README.md  inspect_endpoints.py  pyproject.toml
.github/workflows/: test.yml
metrovalencia/: __init__.py  client.py  exceptions.py  http.py  utils.py
metrovalencia/data/: paradas.json
metrovalencia/models/: __init__.py  comunicaciones.py  incidencias.py  paradas.py  previsiones.py  rutas.py  tarifas.py  tarjetas.py
metrovalencia/models/v2/: __init__.py  incidencias.py
metrovalencia/resources/: __init__.py  base.py  comunicaciones.py  incidencias.py  paradas.py  previsiones.py  rutas.py  tarifas.py  tarjetas.py
metrovalencia/resources/v2/: __init__.py  base.py  incidencias.py
repo/docs/: 01-instalacion.md  02-inicio-rapido.md  03-recursos.md  04-modelos.md  05-excepciones.md  06-referencia.md  README.md
scripts/: fetch_paradas.py
tests/: test_class_response.py  test_json_response.py  test_parsed_json_response.py
