[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrovalencia"
version = "0.1.0"
description = "Python SDK for MetroValencia API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MetroValencia", email = "dev@alexbadi.es"}
]
dependencies = [
    "httpx>=0.24.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
metrovalencia = ["data/paradas.json"]